modificación de Index.html

--- a/index.html
+++ b/index.html
@@ -24,3 +24,8 @@
     <hr>
 </body>
 </html>
+
+
+<h1><u>Nicola&#769s Jaureguiberry</u></h1>
+
+<p>En &eacuteste repositorio encontrara&#769s todas las pra&#769cticas realizadas en el Bootcamp de Java realizadas en <b><em>EducaciónIT</em></b></p> 
