Modificación en Index.html

--- a/M4/Ejercicio 1/index.html
+++ b/M4/Ejercicio 1/index.html
@@ -12,9 +12,9 @@
         <form>
             <h1>Iniciar sesión</h1>
             <br>
-            <input type="text" id="username" name="username" placeholder="Introduzca el nombre del usuario">
+            <input type="text" id="username" name="username" placeholder="Usuario">
             <br>
-            <input type="password" id="password" name="password" placeholder="Introduzca la contraseña">
+            <input type="password" id="password" name="password" placeholder="Contraseña">
             <br>
             <button>Ver que me contesta PHP</button>
         </form>
