--- a/M5/Ejercicio 1/contacto.html
+++ b/M5/Ejercicio 1/contacto.html
@@ -17,21 +17,31 @@
                 <li><a href="contacto.html" class="activo">CONTACTO</a></li>
             </ul>
     </header>
-    <p>¿Querés que nos contactemos con vos?</p>
+    <p class="question">¿Querés que nos contactemos con vos?</p>
     <br>
     <form>
         <p>Dejanos tu consulta:</p>
         <br>
-        <label for="nombre"><p>Nombre Completo *</p></label>
-        <input type="text" id="nombre" name="nombre" required>
         <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required placeholder="Ingresa tu correo electrónico">
-        <br>
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" required></textarea>
-        <br>
+        <div>
+            <label for="nombre"><p class="field">Nombre Completo </p><p class="required">*</p></label>
+            <br>
+            <input type="text" id="nombre" name="nombre" required>
+        </div>
+        <div>
+            <label for="email"><p class="field">Email </p><p class="required">*</p></label>
+            <br>
+            <input type="email" id="email" name="email" required placeholder="example@example.com">
+        </div>
+        <div>
+            <label for="mensaje"><p class="field">Comentario </p><p class="required">*</p></label>
+            <br>
+            <textarea id="mensaje" name="mensaje" required></textarea>
+        </div>
+        <div class="botonera">
         <button type="submit">Enviar</button>
+        <button type="reset">Resetear</button>
+        </div>
     </form>
 </body>
 </html>
