se corrige ejercicio 1 y 2

--- a/M5/Ejercicio 1y2/contacto.html
+++ b/M5/Ejercicio 1y2/contacto.html
@@ -11,7 +11,7 @@
     <header>
         <hr>
         <nav>
-            <img src="/Ejercicio 1/images/M5-logo-azul.svg" alt="Logo" id="logo-nav">
+            <img src="/Ejercicio 1y2/images/M5-logo-azul.svg" alt="Logo" id="logo-nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="contacto.html" class="activo">CONTACTO</a></li>
