--- a/M5/Ejercicio 1y2/index.html
+++ b/M5/Ejercicio 1y2/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="/Ejercicio 1/images/M5-logo-azul.svg" alt="Logo" id="logo-nav">
+            <img src="/Ejercicio 1y2/images/M5-logo-azul.svg" alt="Logo" id="logo-nav">
             <ul>
                 <li><a href="index.html" class="activo">HOME</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
@@ -20,6 +20,6 @@
         <p>elegí tu plan de Alojamiento Web sin Impuestos Extra. Facturación en pesos.</p>
     </header>
     <div class="img-background"></div>
-    <img src="/Ejercicio 1/images/M5-Desafío1-img.png" alt="">
+    <img src="/Ejercicio 1y2/images/M5-Desafío1-img.png" alt="">
 </body>
 </html>
