Se Realiza Ejercicio 3, se finaliza Modulo 5

--- a/M5/Ejercicio 1-2-3/contacto.html
+++ b/M5/Ejercicio 1-2-3/contacto.html
@@ -8,10 +8,11 @@
     <title>Contacto</title>
 </head>
 <body>
+    <div>
     <header>
         <hr>
         <nav>
-            <img src="/Ejercicio 1y2/images/M5-logo-azul.svg" alt="Logo" id="logo-nav">
+            <img src="/Ejercicio 1-2-3/images/M5-logo-azul.svg" alt="Logo" id="logo-nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="contacto.html" class="activo">CONTACTO</a></li>
@@ -43,5 +44,7 @@
         <button type="reset">Resetear</button>
         </div>
     </form>
+    </div>
+    <footer><img src="/Ejercicio 1-2-3/images/M5-logo-blanco.svg" alt="" class="logo-footer"></footer>
 </body>
 </html>
