se modifica ejercicio 2 M3

--- a/M3/desafio2/ejercicio2.html
+++ b/M3/desafio2/ejercicio2.html
@@ -11,9 +11,9 @@
     <div class="container mt-5 d-md-flex align-items-center ">
         <div class="row "></div>
             <img src="/M3/desafio2/images/uncanio.jpg" alt=""  class="col-md-5 col-sm-12 col-lg-5">
-            <div class="ms-5 mx-sm-auto px-4 col-md-9 col-lg-6">
+            <div class="ms-5 ms-sm-0 px-4 col-md-9 col-lg-7">
                 <div class="h1 text-sm-center text-md-start">Un Caño</div>
-                <div class="text">
+                <div class="text text-sm-start">
                     Dirección de arte y fotografía de producto para <span>Un caño,</span> marca de
                     articulos de organización y objetos de decoración realizados en aluminio
                     y hierro.
